# rapidtag

./: .gitignore  Cargo.toml  NOTICE  README.md  gen_dicts.py  pyproject.toml
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: build-board.sh  pnp_opencv_vs_rapidtag.py  pnp_sanity.py
src/: affinity.rs  contours.rs  detector.rs  dictionaries_data.rs  dictionary.rs  imgproc.rs  lib.rs
tests/: bench.py  crosscheck.py
