[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "fasttag"
version = "0.1.0"
description = "Pure-Rust port of OpenCV's aruco marker detection (maturin/PyO3)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.optional-dependencies]
dev = ["numpy", "opencv-contrib-python", "pytest"]

[tool.maturin]
features = ["pyo3/extension-module"]
