[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rapidtag"
version = "0.1.0"
description = "RapidTag — fast realtime fiducial marker (ArUco/AprilTag) detection in Rust"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.optional-dependencies]
dev = ["numpy", "opencv-contrib-python", "pytest"]

[tool.maturin]
features = ["pyo3/extension-module"]
