[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rapidtag"
version = "0.1.4"
description = "RapidTag — fast realtime fiducial marker (ArUco/AprilTag) detection in Rust"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Sujith Christopher", email = "sujith.christopher52@gmail.com" }]
keywords = ["aruco", "apriltag", "fiducial", "marker", "detection", "computer-vision", "realtime", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/SujithChristopher/rapidtag"
Repository = "https://github.com/SujithChristopher/rapidtag"
Issues = "https://github.com/SujithChristopher/rapidtag/issues"

[project.optional-dependencies]
dev = ["numpy", "opencv-contrib-python", "pytest"]

[tool.maturin]
features = ["pyo3/extension-module"]
